CB-31529 Fix flow configuration assembly and set failureEvent for non-default failure actions as well
Handle exceptions occurring in an error state when failureEvent is missing (e.g., default failure state or failure states at the end of the flow).
Remove unused flow header constants and fix duplicates.